--- a/client/src/styles/lastWeek.module.css
+++ b/client/src/styles/lastWeek.module.css
@@ -3,4 +3,29 @@
   /* padding: 10%; */
   display: flex;
   flex-direction: row;
+  padding: 10px;
+}
+
+.dayCard {
+  border-style: outset;
+  border-width: 2px;
+  border-color: gray;
+  border-radius: 7px;
+  padding: 6px 80px 8px 10px;
+  background-color: #EEEEEE;
+}
+
+.dateHeader {
+  padding: 5px;
+  border-width: 2px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.taskContent {
+  white-space: nowrap;
+  padding: 5px;
+  border-radius: 7px;
+  margin: 3px;
+  font-family: monospace;
 }
